ola-parser/src/testdata/syntaxTests/types/mapping/array_argument_external.sol
contract C {
    fn f(mapping(uint => uint)[] storage) external pure {
    }
}
// ----
// TypeError 6651: (28-59): Data location must be "memory" or "calldata" for parameter in external fn, but "storage" was given.
